# discord-musicbot-rust

./: Cargo.toml  ubuntu_req.txt
src/: main.rs
src/commands/: mod.rs
src/commands/music/: deafen.rs  join.rs  mod.rs  mute.rs  pause.rs  play.rs  stop_skip.rs
src/util/: mod.rs
