[package]
name = "discord-music-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.5.5", features = ["collector"] }
songbird = { version = "0.3.2", features = ["tokio", "serenity", "builtin-queue", "yt-dlp"] }
tokio = { version = "1.29.1", features = ["full"] }
